syntax = "proto3";
package dymensionxyz.dymension.lightclient;

import "gogoproto/gogo.proto";

option go_package = "github.com/dymensionxyz/dymension/v3/x/lightclient/types";

// When the canonical client of the rollapp is set
message EventSetCanonicalClient {
  string rollapp_id = 1;
  string client_id = 2;
}